<resources>
    <string name="app_name">WeatherForecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Map</string>
    <string name="favourite_details">Favourite Details</string>
    <string name="alert_dialog">Alert</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Units">Units</string>
    <string name="kelvin">kelvin</string>
    <string name="location">Location</string>
    <string name="GPS">GPS</string>
    <string name="map">Map</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="save">Save</string>
    <string name="Notification">Notification</string>
    <string name="Alarm">Alarm</string>
    <string name="cancel">cancel</string>
</resources>