<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favourite"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/alert"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/settings"
            android:title="Map" />
    </group>
</menu>