<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/initialFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherforecast.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="map"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="lat"
            app:argType="string"
            android:defaultValue="0" />
        <argument
            android:name="lon"
            app:argType="string"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_nav_home_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.weatherforecast.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_nav_favourite_to_favouriteDetailsFragment"
            app:destination="@id/favouriteDetailsFragment" />
        <action
            android:id="@+id/action_nav_favourite_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <argument
            android:name="lat"
            app:argType="string"
            android:defaultValue="0" />
        <argument
            android:name="lon"
            app:argType="string"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.weatherforecast.ui.alert.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherforecast.ui.settings.SettingsFragment"
        android:label="settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/initialFragment"
        android:name="com.example.weatherforecast.InitialFragment"
        android:label="fragment_initial"
        tools:layout="@layout/fragment_initial" >
        <action
            android:id="@+id/action_initialFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_initialFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weatherforecast.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="fav"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_mapsFragment_to_nav_favourite"
            app:destination="@id/nav_favourite" />
    </fragment>
    <fragment
        android:id="@+id/favouriteDetailsFragment"
        android:name="com.example.weatherforecast.ui.favourite.FavouriteDetailsFragment"
        android:label="@string/favourite_details"
        tools:layout="@layout/fragment_favourite_details" />
    <dialog
        android:id="@+id/alertDialogFragment"
        android:name="com.example.weatherforecast.ui.alert.AlertDialogFragment"
        android:label="@string/alert_dialog"
        tools:layout="@layout/fragment_alert_dialog" >
        <action
            android:id="@+id/action_alertDialogFragment_to_nav_alert"
            app:destination="@id/nav_alert" />
    </dialog>
</navigation>