<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#C7CDEA"
    android:backgroundTint="#C7CDEA"
    app:cardCornerRadius="0dp"
    app:cardElevation="20dp"
    tools:context=".ui.alert.AlertDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_alert_time">

            <RadioButton
                android:id="@+id/radio_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/Notification" />

            <RadioButton
                android:id="@+id/radio_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Alarm" />
        </RadioGroup>

        <TextView
            android:id="@+id/alert_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="80dp"
            android:text="Choose location"
            android:textSize="16sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        <Button
            android:id="@+id/choose_alert_time"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="90dp"
            android:text="@string/Time"
            app:cornerRadius="40dp"
            app:layout_constraintEnd_toStartOf="@+id/choose_alert_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/choose_alert_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:text="@string/Date"
            app:cornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/alert_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cancel"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/alert_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_location" />

        <Button
            android:id="@+id/alert_save"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/save"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_location" />

        <TextView
            android:id="@+id/from_time_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_alert_time" />

        <TextView
            android:id="@+id/from_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="0dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@id/datearrow"
            app:layout_constraintTop_toBottomOf="@+id/choose_alert_date" />

        <TextView
            android:id="@+id/to_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/datearrow"
            app:layout_constraintTop_toBottomOf="@+id/choose_alert_date" />

        <ImageView
            android:id="@+id/datearrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/arrow"
            app:layout_constraintStart_toEndOf="@+id/from_date_dialog"
            app:layout_constraintTop_toBottomOf="@+id/choose_alert_date" />

        <ImageView
            android:id="@+id/timearrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/arrow"
            app:layout_constraintStart_toEndOf="@+id/from_time_dialog"
            app:layout_constraintTop_toBottomOf="@+id/choose_alert_time" />

        <TextView
            android:id="@+id/to_time_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/timearrow"
            app:layout_constraintTop_toBottomOf="@+id/choose_alert_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>