<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    app:cardElevation="20dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="@string/Time"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="@string/Date"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/from_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="8:30"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/from_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="12-8-2023"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/to_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="8:40"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/from_time"
            app:layout_constraintTop_toTopOf="@+id/from_time" />

        <TextView
            android:id="@+id/to_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="15-8-2023"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/from_date"
            app:layout_constraintTop_toTopOf="@+id/from_date" />

        <ImageView
            android:id="@+id/notification_vs_alarm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/alarm" />

        <ImageView
            android:id="@+id/delete_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_vs_alarm"
            app:srcCompat="@drawable/delete" />

        <TextView
            android:id="@+id/country_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="Alexandria"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/delete_btn"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_date" />

        <TextView
            android:id="@+id/unit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="@string/From"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:text="@string/To"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/unit_txt"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>